--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="col-md-4 mb-4">
             <h5>Suscribite</h5>
       <p class="p-custom">para explorar sabor</p>
-      <img src="https://imageplaceholder.net/200x200" class="caja" alt="Miembro 1">
+      <img src="Imags/BP.png" class="caja" alt="Miembro 1">
     </div>
   </div>
 </section>
@@ -286,7 +286,7 @@ Enólogo Aficionado (Buenos Aires)</footer>
 
 <!-- GALERÍA C: Carrusel horizontal con tarjetas -->
 <section class="section-spacing container py-5 text-center">
-  <h2 class="mb-4" class="h2-custom">Galería deslizante</h2>
+  <h2 class="mb-4" class="h2-custom">Galería de fotos</h2>
   <div id="carouselGaleriaC" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <!-- Slide 1 -->
@@ -309,51 +309,6 @@ Enólogo Aficionado (Buenos Aires)</footer>
     </button>
   </div>
 </section>
-
-<!-- PRICING: Tabla de precios o planes -->
-<section class="section-spacing container text-center">
-  <h2 class="h2-custom">Planes o Precios</h2>
-  <p class="p-custom">Comparación de planes.</p>
-  <div class="row mt-5">
-    <!-- Cada columna es un plan -->
-    <div class="col-md-4">
-      <div class="card p-4 h-100">
-        <h5>Plan Básico</h5>
-        <p class="display-6">$100</p>
-        <ul class="list-unstyled">
-          <li>✔ Servicio básico 1</li>
-          <li>✔ Servicio básico 2</li>
-        </ul>
-        <a href="#" class="btn btn-outline-dark mt-3">Elegir</a>
-      </div>
-    </div>
-    <!-- Cada columna es un plan -->
-    <div class="col-md-4">
-      <div class="card p-4 h-100">
-        <h5>Plan Básico</h5>
-        <p class="display-6">$100</p>
-        <ul class="list-unstyled">
-          <li>✔ Servicio básico 1</li>
-          <li>✔ Servicio básico 2</li>
-        </ul>
-        <a href="#" class="btn btn-outline-dark mt-3">Elegir</a>
-      </div>
-    </div>
-    <!-- Cada columna es un plan -->
-    <div class="col-md-4">
-      <div class="card p-4 h-100">
-        <h5>Plan Básico</h5>
-        <p class="display-6">$100</p>
-        <ul class="list-unstyled">
-          <li>✔ Servicio básico 1</li>
-          <li>✔ Servicio básico 2</li>
-        </ul>
-        <a href="#" class="btn btn-outline-dark mt-3">Elegir</a>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /PRICING -->
 
 <!-- FAQS: Preguntas frecuentes -->
 <section class="section-spacing container text-center">
