--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <!-- HERO: Sección de portada con llamado a la acción -->
 <section class="section-spacing container d-flex align-items-center justify-content-between" style="min-height: 100vh; padding-top: 100px;">
-  <div class="row align-items-center"></div>
+  <div class="row align-items-center"><img src="Imags/Fondo2.png"></div>
     <!-- Texto principal -->
     <div class="col-lg-6">
       <h1 class="h1-custom">Encontrá tu experiencia en cada caja</h1>
@@ -58,7 +58,7 @@
     </div>
     <!-- Imagen destacada -->
     <div class="col-lg-6 text-center">
-      <img src="https://imageplaceholder.net/500x500" class="img-fluid img-rounded" alt="Imagen Hero">
+      <img src="Imags/Fondo2.png" class="img-fluid img-rounded" alt="Imagen Hero">
     </div>
   </div>
 </section>
